--- a/googlemap.html
+++ b/googlemap.html
@@ -63,7 +63,7 @@
       }
     </script>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC5cYWxI_4V1b_ujZxNYr1ZzS5dCpJDG9U&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key={key}&callback=initMap">
     </script>
   </body>
 </html>
