--- a/home.html
+++ b/home.html
@@ -3,6 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
+
 <style>
 html {
     width: 100%;
@@ -10,58 +11,44 @@ html {
     margin: 0;
     padding: 0;
 }
-#grad1 {
-  height:700px;
+body {
+  height:100%;
   background-image: linear-gradient(rgb(51, 196, 63), rgb(17, 114, 194)); 
   background-repeat:  no-repeat;
 }
-#rcorner1 {
-            margin-top:100px;
-            margin-left:490px;
-            border-radius: 25px;
-            background: white;
-            padding: 20px;
-            width: 500px;
-            height: 200px;
-            text-align: center;
+.rcorner1 {
+  margin: 1rem;
+  border-radius: 25px;
+  background: white;
+  padding: 20px;
+  width: auto;
+  height: 40%;
+  text-align: center;
+}
 
-         }
-         #rcorner2 {
-            border-radius: 25px;
-            margin-left:490px;
-            background: white;
-            padding: 20px; 
-            width: 500px;
-            height: 200px;
-            text-align: center;
-
-         }
 a{
   font-family: 'Oswald', Arial;
   font-size: 50px;
   color:black;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
-    padding: 10px;
+  display: block;
+  padding: 10px;
 }
 </style>
 </head>
-<body id="grad1">
+<body>
 
-<div id="rcorner1">
-  <a href="">VOICE  </a> 
-
+<div class="rcorner1">
+  <a href = '#'>VOICE</a>
 </div>
-<br>
-<br>
-<div id="rcorner2">
-        <a href="Main-Voicenav.html
-        ">NON-VOICE  </a> 
+<div class="rcorner1">
+        <a href="Main-Voicenav.html">NON-VOICE</a> 
     </div>
-        
 
-
-
+    <script src="https://code.responsivevoice.org/responsivevoice.js?key=GR3vv3Qk"></script>
+    <script>
+      setTimeout(responsiveVoice.speak("Click on top to enable voice navigation."),15000);
+    </script>
 </body>
 </html>
