--- a/askcontact.html
+++ b/askcontact.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
  
-  <link rel="stylesheet" type="text/css" href="css\askcontact.css">
+  <link rel="stylesheet" type="text/css" href="askcontact.css">
 
 </head>
 <body>
@@ -15,18 +15,11 @@
          <h1> PLEASE ASK EMERGENCY CONTACT TO REGISTER</h1>
      </div>
      <div class="form">
-      <form class="register-form">
-      <input type="text" placeholder="name"/>
-      <input type="password" placeholder="password"/>
-      <input type="text" placeholder="email address"/>
-      <button>create</button>
-      <p class="message">Already registered? <a href="#">Sign In</a></p>
-    </form>
-    <form class="login-form">
-      <input type="text" placeholder="email"/>
-      <input type="password" placeholder="password"/>
-      <button>login</button>
      
+    <form class="login-form" action="mail.php" method="POST">
+      <input type="text" name="email" placeholder="email"/>
+      <input type="password" name="password" placeholder="password"/>
+      <button>login</button>
     </form>
   </div>
 </div>
