--- a/ABOUT-iot.html
+++ b/ABOUT-iot.html
@@ -40,11 +40,11 @@ body, html {
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home"></header>
 <div class="w3-top">
   <div class="w3-bar w3-white w3-card" id="myNavbar">
-    <a href="#home" class="w3-bar-item w3-button w3-wide">ASSIST</a>
+    <a href="homeiot.html" class="w3-bar-item w3-button w3-wide">ASSIST</a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
-      <a href="mapiot.html" class="w3-bar-item w3-button">LOCATE</a>
-      <a href="#" class="w3-bar-item w3-button">ACESSIBILITY INFO</a>
+      <a href="mapiot.php" class="w3-bar-item w3-button">LOCATE</a>
+      <!--<a href="#" class="w3-bar-item w3-button">ACESSIBILITY INFO</a>-->
       <a href="helpiot.html" class="w3-bar-item w3-button"><i class="fa fa-user"></i>HELP</a>
       <a href="ABOUT-iot.html" class="w3-bar-item w3-button">ABOUT</a>
       <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
@@ -59,9 +59,9 @@ body, html {
 
 <!-- Sidebar on small screens when clicking the menu icon -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
-  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
-  <a href="mapiot.html" onclick="w3_close()" class="w3-bar-item w3-button">LOCATE</a>
-  <a href="#team" onclick="w3_close()" class="w3-bar-item w3-button">ACESSIBILITY Info</a>
+  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close</a>
+  <a href="mapiot.php" onclick="w3_close()" class="w3-bar-item w3-button">LOCATE</a>
+  <!--<a href="#team" onclick="w3_close()" class="w3-bar-item w3-button">ACESSIBILITY Info</a> -->
   <a href="helpiot.html" onclick="w3_close()" class="w3-bar-item w3-button">HELP</a>
   <a href="ABOUT-iot.html" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT</a>
   <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">CONTACT</a>
