--- a/helpiot.html
+++ b/helpiot.html
@@ -40,11 +40,10 @@ body, html {
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home"></header>
 <div class="w3-top">
   <div class="w3-bar w3-white w3-card" id="myNavbar">
-    <a href="#home" class="w3-bar-item w3-button w3-wide">ASSIS</a>
+    <a href="homeiot.html" class="w3-bar-item w3-button w3-wide">ASSIST</a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="mapiot.html" class="w3-bar-item w3-button">LOCATE</a>
-      <a href="#" class="w3-bar-item w3-button">ACESSIBILITY INFO</a>
       <a href="helpiot.html" class="w3-bar-item w3-button"><i class="fa fa-user"></i>HELP</a>
       <a href="ABOUT-iot.html" class="w3-bar-item w3-button">ABOUT</a>
       <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
@@ -71,6 +70,3 @@ body, html {
 <div class="w3-content w3-container w3-padding-64" >
   <h3 class="w3-center">HELP</h3>
   <p class="w3-center"><em></em></p>
- 
- 
-   
