--- a/start_nav.html
+++ b/start_nav.html
@@ -36,13 +36,7 @@ p{
 
 <div id="rcorners2">
   <p> Navigation : </p>
-  <p id="dist" > Distance &nbsp; &nbsp; Location</p>
+  <p id="dist" >Location</p>
 </div>
-
-
-        
-
-
-
 </body>
 </html>
